@@ -139,6 +139,7 @@ Changes from 4.3.x -> 4.4-alpha
 * xymond: new --reload-interval opt can be used to control how often config files are
   scanned for changes (and re-processed if necessary). Previously, was equivalent
   to checkpoint interval. Default: 10m
+* xymonlaunch/xymond_channel: canonicalize error/debug log prefixing of tool name 
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
